# Raygen

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  Readme.md  attachments.glsl
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
extra-tools/cuda-ptx/: CMakeLists.txt  VRPathTracer.cu  VRPathTracerAux.h  commonStructs.h  ggx_brdf.h  helpers.h  lambert_brdf.h  optixGeometryTriangles.cu  pinhole.cu  test.cu  test.h  tutorial.h
extra-tools/glad-dll-gen/: CMakeLists.txt  glad.c
rt-xengine/: AppBase.cpp  AppBase.h  CMakeLists.txt  GameBase.h  main.cpp
rt-xengine/app-default/: App.cpp  App.h  CMakeLists.txt
rt-xengine/asset/: Asset.h  AssetManager.cpp  AssetManager.h  AssetPod.h  PathSystem.cpp  PathSystem.h  Pod.h  PodLoaders.cpp
rt-xengine/assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  CachingAux.h  DiskAsset.cpp  DiskAsset.h  DiskAssetManager.cpp  DiskAssetManager.h  DiskAssetPart.cpp  DiskAssetPart.h  FileAsset.cpp  FileAsset.h  MultiKeyAssetCacheHashing.h  PathSystem.cpp  PathSystem.h
rt-xengine/editor/: Editor.cpp  Editor.h
rt-xengine/event/: Event.cpp  Event.h
rt-xengine/game-default/: CMakeLists.txt  game.h
rt-xengine/include/: common-structs.h  rt-xengine.h
rt-xengine/input/: Input.cpp  Input.h  OculusHMD.cpp  OculusHMD.h
rt-xengine/pch/: pch.h
rt-xengine/platform/: Window.h
rt-xengine/renderer/: GPUAsset.cpp  GPUAsset.h  NodeObserver.cpp  NodeObserver.h  Renderer.cpp  Renderer.h
rt-xengine/system/: Engine.cpp  Engine.h  EngineComponent.cpp  EngineComponent.h  EngineEvents.h  EngineModule.cpp  EngineModule.h  EngineObject.cpp  EngineObject.h  EventListener.cpp  EventListener.h  Input.cpp  Input.h  Object.cpp  Object.h
rt-xengine/world/: NodeFactory.cpp  NodeFactory.h  World.cpp  World.h
source/: .clang-format  App.cpp  App.h  AppBase.cpp  AppBase.h  AppMain.cpp  CMakeLists.txt  FeatureMacros.h  empty.cpp  main.cpp  pch.h
source/app-default/: App.h
source/asset/: Asset.cpp  Asset.h  AssetHandlerManager.h  AssetImporterManager.h  AssetManager.cpp  AssetManager.h  AssetPod.h  CachingAux.h  ImporterRegistry.cpp  ImporterRegistry.h  PathSystem.cpp  PathSystem.h  PodEntry.h  PodFwd.h  PodHandle.h  PodIncludes.h  PodLoaders.cpp  PodSerializers.h  Serialization.cpp  Serialization.h  UriLibrary.h
source/assets/: AssetHandlerManager.h  AssetImporterManager.h  AssetManager.cpp  AssetManager.h  AssetPod.h  AssetRegistry.h  AssetUpdateInfo.h  Assets.cpp  Assets.h  ImporterRegistry.cpp  ImporterRegistry.h  PodEditor.cpp  PodEditor.h  PodEntry.h  PodFwd.h  PodFwdUtl.h  PodHandle.h  PodIncludes.h  PodSerializers.h  Serialization.cpp  Serialization.h  ShaderRegistry.cpp  ShaderRegistry.h  ShaderRegistry.impl.h  StdAssets.cpp  StdAssets.h  UriLibrary.cpp  UriLibrary.h
source/core/: AABB.h  BoolFlag.h  Concepts.h  CoreEnums.h  CoreStructs.h  Event.h  FrameClock.cpp  FrameClock.h  Hash.h  Icons.h  MacroUtl.h  MathAux.h  MathUtl.h  MemorySpan.h  MetaTemplates.h  StringAux.h  StringConversions.h  StringHashing.h  StringUtl.h  Types.h
source/dynlib/: GlslCompiler.cpp  GlslCompiler.h  RayHitGeometry.cpp  RayHitGeometry.h  test.cpp
source/ecs_universe/: BasicComponent.cpp  BasicComponent.h  ComponentDetail.h  ComponentsDb.cpp  ComponentsDb.h  EcsWorld.cpp  EcsWorld.h  Entity.cpp  Entity.h  SceneComponentBase.h
source/editor/: AssetWindow.cpp  AssetWindow.h  CaptionMenuBar.cpp  CaptionMenuBar.h  DataStrings.h  Details.cpp  Details.h  EdClipboardOp.cpp  EdClipboardOp.h  EdComponentWindows.cpp  EdComponentWindows.h  EdInput.h  EdMenu.cpp  EdMenu.h  EdOperation.h  EdUserSettings.cpp  EdUserSettings.h  Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  EditorObject.cpp  EditorObject.h  NodeContextActions.cpp  NodeContextActions.h  Outliner.cpp  Outliner.h  PropertyEditor.cpp  PropertyEditor.h  SceneSave.cpp  SceneSave.h  TextIcons.h
source/engine/: Engine.cpp  Engine.h  Events.h  Input.cpp  Input.h  Listener.cpp  Listener.h  Logger.cpp  Logger.h  MulticastEvent.h  Object.cpp  Object.h  Timer.h
source/event/: Event.cpp  Event.h
source/pch/: pch.h
source/platform/: DynLibLoader.cpp  DynLibLoader.h  GlfwUtil.cpp  GlfwUtil.h  GlfwUtl.cpp  GlfwUtl.h  Platform.cpp  Platform.h  Window.cpp  Window.h
source/reflection/: GenMacros.h  GetClass.h  NodeFlags.h  PodReflection.h  PodTools.h  Property.h  PropertyFlags.h  PropertyTypes.h  ReflClass.h  ReflEnum.h  ReflectionTools.h  TypeId.h
source/renderer/: DeferredPass.cpp  DeferredPass.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  DeviceWrapper.cpp  DeviceWrapper.h  EditorPass.cpp  EditorPass.h  GenericGpuAssetManager.h  GeometryPass.cpp  GeometryPass.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  Instance.cpp  Instance.h  InstanceLayer.cpp  InstanceLayer.h  InstanceWrapper.cpp  InstanceWrapper.h  LogicalDevice.cpp  LogicalDevice.h  Material.cpp  Material.h  Model.cpp  Model.h  NodeObserver.cpp  NodeObserver.h  ObserverRenderer.cpp  ObserverRenderer.h  PhysicalDevice.cpp  PhysicalDevice.h  PhysicalDeviceWrapper.cpp  PhysicalDeviceWrapper.h  PoolAllocator.cpp  PoolAllocator.h  Renderer.cpp  (+11 more)
source/rendering/: DebugName.cpp  DebugName.h  DeferredPass.cpp  DeferredPass.h  Device.cpp  Device.h  EditorPass.cpp  EditorPass.h  GeometryPass.cpp  GeometryPass.h  Instance.cpp  Instance.h  Layer.cpp  Layer.h  Layouts.cpp  Layouts.h  Pathtracer.cpp  Pathtracer.h  PoolAllocator.cpp  PoolAllocator.h  Renderer.cpp  Renderer.h  RendererBase.cpp  RendererBase.h  Rendering.cpp  Rendering.h  RtxRenderer.cpp  RtxRenderer.h  SpotlightsPass.cpp  SpotlightsPass.h  StaticPipes.cpp  StaticPipes.h  Swapchain.cpp  Swapchain.h  VkCoreIncludes.h  VulkanLoader.cpp  VulkanLoader.h  VulkanUtl.h
source/system/: Engine.cpp  Engine.h  EngineEvents.h  Input.cpp  Input.h  InputEnums.h  Logger.cpp  Logger.h  Object.cpp  Object.h  Timer.h  UUIDGenerator.h
source/universe/: BasicComponent.cpp  BasicComponent.h  ComponentDetail.h  ComponentsDb.cpp  ComponentsDb.h  EcsWorld.cpp  EcsWorld.h  Entity.cpp  (+13 more)
tests/: CMakeLists.txt  Example.cpp  Test.h  TestMain.cpp
(+1522 files in other folders)
